--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
-/*  your css code here. If applicable */
+body{
+	      background: #f5f5f5;
+      }
+    div {
+	width:800px;
+	background:white;
+   }
+   #john {
+	margin-left: 650px;
+	padding-bottom:20px
+   }
+   #sen {
+	padding-top:20px;
+   }
