--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,14 @@ body{
     div {
 	width:800px;
 	background:white;
+	border: 1px solid #f5f5f5;
+	margin:5px;
    }
    #john {
 	margin-left: 650px;
-	padding-bottom:20px
+	padding-bottom:10px
    }
    #sen {
+	margin-left:20px;
 	padding-top:20px;
    }
