--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,15 @@ body{
 	      background: #f5f5f5;
       }
     div {
-	width:800px;
+	width:700px;
 	background:white;
 	border: 1px solid #f5f5f5;
 	margin:5px;
    }
    #john {
-	margin-left: 650px;
-	padding-bottom:10px
+	text-align: right;
+	padding-bottom:10px;
+	margin-right:20px;
    }
    #sen {
 	margin-left:20px;
